[FIX] pos : product images look zoomed in
The cover scss rule first stretches the image to fill the container completely,
then cropped at the size of the container.

This results in some poor display result if the image has a weird aspect ratio.

This is a behaviour change from saas-16.3 where the image wasn't cropped and
simply resized to fit inside the container.

opw-3826349

--- a/addons/point_of_sale/static/src/scss/pos.scss
+++ b/addons/point_of_sale/static/src/scss/pos.scss
@@ -1161,7 +1161,7 @@ td {
 .pos .product .product-img img {
     width: 100%;
     height: 100px;
-    object-fit: cover;
+    object-fit: contain;
 }
 @media screen and (max-width: 768px) {
     .pos .product:active {
